# pypproxy

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  go.mod  go.sum  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
architecture/: index.html
cmd/paxy/: main.go
configuration/: index.html
docs/: api.md  architecture.md  configuration.md  getting-started.md  index.md  lua-scripting.md  protocols.md  replay.md  rule-engine.md  web-ui.md
getting-started/: index.html
internal/api/: server.go
internal/cert/: ca.go
internal/config/: config.go
internal/interceptor/: interceptor.go
internal/proxy/: proxy.go
internal/replay/: replay.go
internal/rule/: rule.go  rule_test.go
internal/script/: lua.go
internal/store/: store.go  store_test.go
paxy/: codec.py
paxy/api/: server.py
paxy/bulk/: sender.py
paxy/cert/: ca.py
paxy/config/: config.py
paxy/exporter/: exporter.py  importer.py
paxy/graphql/: detector.py  modifier.py
paxy/intercept/: manager.py
paxy/interceptor/: interceptor.py
paxy/proto/: mqtt.py  ws.py  ws_intercept.py
paxy/proxy/: proxy.py
paxy/replay/: replay.py
paxy/scan/: scanner.py
paxy/script/: engine.py
paxy/security/: header_checker.py  int_overflow.py  jwt_checker.py  plugin.py  randomness.py
paxy/store/: db.py  filter_parser.py  fts.py  models.py  scope.py  store.py
paxy/ui/: app.py  bulk_sender_ui.py  cui.py  detail.py  diff_view.py  graphql_tab.py  import_tab.py  intercept_dialog.py  resender.py  scan_tab.py  security_tab.py  settings.py
protocols/: index.html
pypproxy/: codec.py
pypproxy/analytics/: stats.py
pypproxy/api/: server.py
pypproxy/bulk/: sender.py
pypproxy/cert/: ca.py  client_cert.py
pypproxy/codegen/: generator.py
pypproxy/dns/: server.py
pypproxy/exporter/: exporter.py  importer.py
pypproxy/frida/: hook_generator.py  pinning_bypass.py
pypproxy/graphql/: detector.py  introspection.py  schema_store.py
pypproxy/interceptor/: interceptor.py
pypproxy/openapi/: generator.py
pypproxy/proto/: grpc.py  ws.py
pypproxy/proxy/: proxy.py
pypproxy/replay/: replay.py
pypproxy/rule/: rule.py
pypproxy/scan/: scanner.py
replay/: index.html
rule-engine/: index.html
scripting/: index.html
search/: search_index.json
tests/: test_advanced.py  test_advanced_tools.py  test_bulk.py  test_cert.py  test_codec.py  test_decode.py  test_exporter.py  test_filter_parser.py  test_frida.py  test_graphql.py  test_interceptor.py  test_mqtt.py  test_rule.py  test_security.py  test_store.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/: index.html
(+32 files in other folders)
