[project]
name = "pypproxy"
version = "0.1.0"
description = "MITM HTTP/HTTPS proxy for inspecting and modifying traffic"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=16.0",
    "httpx>=0.27.0",
    "cryptography>=48.0.0",
    "PyYAML>=6.0.3",
    "nicegui>=3.12.1",
    "rich>=15.0.0",
    "brotli>=1.1.0",
    "aiosqlite>=0.20.0",
    "msgpack>=1.1.0",
    "cbor2>=5.6.0",
    "httpx[http2]>=0.27.0",
]

[project.scripts]
pypproxy = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pypproxy"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["paxy", "pypproxy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
